--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World from index.html
+<!DOCTYPE html>
+<html lag = '"en">
+  <head>
+    <meta charset = "utf-8">
+    <title>My First BitStarter </title>
