index.html typing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,53 @@
 <!DOCTYPE html>
-<html lag = '"en">
+<html lang = '"en">
   <head>
     <meta charset = "utf-8">
     <title>My First BitStarter </title>
+    <link type = "text/css" rel = "stylesheet"
+	  href = "https://d396qusza40orc.cloudfton.net/startup%2Fcode&2Fbootstrap-2.3.3.css">
+    <style type "txt/css">
+      body {
+      padding-top: 20px;
+      padding-bottom: 40px;
+      }
+      .container {
+      width: 960 px;
+      }
+      p.lead {
+      padding-top: 15px;
+      }
+      .navigation, .pitch, .section1, .section2, .faq, .footer {
+      padding: 10px 0px 10px 0px;
+      }
+      .video, .thermometer, .order, .social {
+      border: 1px dotted;
+      text-allign: center;
+      }
+      .video {
+      /* Internal borders have 1 px width, this we need to add 4x 1px to 120 px */
+      height: 124px;
+      line-height: 124px;
+      }
+      .thermpmeter, .order, .social {
+      /* line height to vertically senter http://progz.net/css/vertical-allign/index.html */
+      height: 40px;
+      line-height: 40px;
+      }
+      div.row {
+      border: 1px solid;
+      }
+    </style>
+</head>
+<body>
+  <div class = "container">
+     <div class = "row navigation">
+       <div class = "span2 logo">
+	 Logo
+       </div>
+       <div class = "span6 Blank">
+	 Blank
+       </div>
+       <div class = "span4 about">
+	 About
+       </div>
+       <div>
