--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/jVfereG.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -201,11 +201,11 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/lhf91Tt.jpg">
         </div>
         <div class="span5 copy">
           <p>
-In today's world, social networks are a way of life. Everybody enjoys checking their wall on Facebook and updating their friends on what is going on. Why not harness the power of social networking within your company. Company Connect allows you to improve employee communication, teamwork, and recognition. Company Connect will make that possible for your business.
+In today's world, social networks are a way of life. Everybody enjoys checking their wall on Facebook and updating their friends on what is going on. Why not harness the power of social networking within your company. Company Connect allows you to improve employee communication, teamwork, and recognition. 
 </p>
         </div>
       </div>
@@ -217,7 +217,7 @@ In today's world, social networks are a way of life. Everybody enjoys checking t
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/OFJfxs9.jpg">
         </div>
       </div>
 
