Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Company Connect</h1>
+          <h1>KosherO</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Social Network that Increases Productivity</p>
+          <p class="lead">The definitive and fun place for Kosher on the Web</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -205,16 +205,14 @@
         </div>
         <div class="span5 copy">
           <p>
-In today's world, social networks are a way of life. Everybody enjoys checking their wall on Facebook and updating their friends on what is going on. Why not harness the power of social networking within your company. Company Connect allows you to improve employee communication, teamwork, and recognition. 
-</p>
+There are kosher restaurants all over the world. Although there is no good way to find and qualify them today. KosherO's goal is to use technology to bridge that gap. Whether you a business man that travels for work, a family going on vacation, or a student touring the world. Koshero is the first place to look to find out where to eat on your travels. When your not on the road, KosherO keeps will you updated regarding Kosher places in your neighborhood.</p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Managers can see at a glance what employees are working on and provide recognition for good work. Employees can easily get help and advice from other resources in the company. Company morale and successes can be promoted easily throughout the company.
-          </p>
+KosherO's networking features and dedicated user base are what enable it to bring you the latest and greatest information. You can checkin and become the King for your favorite restaurant, check out where your friends are eating, and get points to reach higher levels of KosherO status! </p>
         </div>
         <div class="span5 asset">
           <img class="img-polaroid" src="http://i.imgur.com/OFJfxs9.jpg">
@@ -232,20 +230,19 @@ In today's world, social networks are a way of life. Everybody enjoys checking t
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseOne">
-                    Why the need for Company Connect if there is LinkedIn? 
+                    Why the need for KosherO? 
                   </a>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    LinkedIn is an external social network for business connections. Company Connect is internal, it allows you to post information that only your employees can see.
-                  </div>
+                    Kosher listings on the web are outdated and boring KosherO allows you to checkup on Kosher places and have fun at the same time.                  </div>
                 </div>
               </div>
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseTwo">
-When will Company Connect go live?
+When will KosherO go live?
                  </a>
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
