--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>KosherO Bitstarter</title>
 <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
@@ -205,7 +205,7 @@
         </div>
         <div class="span5 copy">
           <p>
-There are kosher restaurants all over the world. Although there is no good way to find and qualify them today. KosherO's goal is to use technology to bridge that gap. Whether you a business man that travels for work, a family going on vacation, or a student touring the world. Koshero is the first place to look to find out where to eat on your travels. When your not on the road, KosherO keeps will you updated regarding Kosher places in your neighborhood.</p>
+Social networking is a powerful tool. Facebook defined social networking for friendships, LinkedIN for business, and Waze for GPS. KosherO will define social networking for Kosher! </p>
         </div>
       </div>
 
@@ -235,7 +235,8 @@ KosherO's networking features and dedicated user base are what enable it to brin
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Kosher listings on the web are outdated and boring KosherO allows you to checkup on Kosher places and have fun at the same time.                  </div>
+                    Kosher listings on the web are outdated and boring KosherO allows you to stay updated
+ on Kosher places and have fun at the same time.                  </div>
                 </div>
               </div>
               <div class="accordion-group">
