--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>KosherO Bitstarter</title>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
@@ -14,7 +15,7 @@
           rel="stylesheet" type="text/css">
     <style type="text/css">
 
-/* Large desktop */
+      /* Large desktop */
       @media (min-width: 980px) { 
         body {
          padding-top: 60px;
@@ -40,9 +41,7 @@
        }
       }
 
-
-
-/* All form factors */
+      /* All form factors */
 
       /* Main body and headings */
       body{
@@ -62,7 +61,7 @@
         line-height: 24px;
       }
 
- /* Video pitch and Action */
+      /* Video pitch and Action */
       .pitch {
         padding: 2.5% 0%;
       }
@@ -79,7 +78,8 @@
       .statistics h3, .statistics p {
         color: white;
       }
- /* Marketing Copy and Footer */
+
+      /* Marketing Copy and Footer */
       .copy {
         padding-top: 2.5%;
         padding-bottom: 2.5%;
@@ -98,7 +98,6 @@
       .footer a {
         color: #ccccff;
       }
-      
     </style>
   </head>
   <body>
@@ -147,13 +146,14 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://i.imgur.com/jVfereG.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
+          <div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
@@ -164,7 +164,7 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $1,000,000</p>
+                  <h3>$6000</h3> <p>of $10,000</p>
                 </div>
               </div>
               <div class="span4">
@@ -174,6 +174,7 @@
               </div>
             </div>
           </div>
+          <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -182,17 +183,23 @@
               <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+          </div>
+        </div>
         </div>
       </div>
 
@@ -202,21 +209,21 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/lhf91Tt.jpg">
+          <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
         </div>
         <div class="span5 copy">
           <p>
-Social networking is a powerful tool. Facebook defined social networking for friendships, LinkedIN for business, and Waze for GPS. KosherO will define social networking for Kosher! </p>
+Social networking is a powerful tool. Facebook defined social networking for friendships, LinkedIN for business, and Waze for GPS. KosherO will define social networking for Kosher!          </p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-KosherO's networking features and dedicated user base are what enable it to bring you the latest and greatest information. You can checkin and become the King for your favorite restaurant, check out where your friends are eating, and get points to reach higher levels of KosherO status! </p>
+KosherO's networking features and dedicated user base are what enable it to bring you the latest and greatest information. You can checkin and become the King for your favorite restaurant, check out where your friends are eating, and get points to reach higher levels of KosherO status!          </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/OFJfxs9.jpg">
+          <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
         </div>
       </div>
 
@@ -231,13 +238,14 @@ KosherO's networking features and dedicated user base are what enable it to brin
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseOne">
-                    Why the need for KosherO? 
+                   Why the need for KosherO? 
                   </a>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Kosher listings on the web are outdated and boring KosherO allows you to stay updated
- on Kosher places and have fun at the same time.                  </div>
+                   Kosher listings on the web are outdated and boring KosherO allows you to stay updated
+ on Kosher places and have fun at the same time.  
+                  </div>
                 </div>
               </div>
               <div class="accordion-group">
@@ -245,7 +253,7 @@ KosherO's networking features and dedicated user base are what enable it to brin
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseTwo">
 When will KosherO go live?
-                 </a>
+                  </a>
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
