--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+<!-- Coinbase button -->
+<a class="coinbase-button" data-code="6b0b90d5df3e99bb6d251274b0237653" data-button-style="buy_now_small" href="https://coinbase.com/checkouts/6b0b90d5df3e99bb6d251274b0237653">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
           </div>
           </div>
           <div class="row-fluid">
